--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,6 @@
 body {
   background: blue;
+  color: white;
 }
 
 h3 {
@@ -7,12 +8,12 @@ h3 {
 }
 
 h1 {
-  color: white;
+  color: black;
   text-align: center;
 }
 
 h2 {
-  color: white;
+  color: black;
   text-align: center;
 }
 
@@ -20,7 +21,7 @@ h2 {
   width: 25%;
   float: left;
   margin-left: 6%;
-  border: 1px solid white;
+  background-color: white;
 }
 
 img {
@@ -34,7 +35,16 @@ img {
 }
 
 span {
-  color: white;
+  color: black;
   margin-left: 40%;
   font-size: 20px;
+}
+
+p {
+  color: black;
+  text-align: center;
+}
+
+form {
+  color: black;
 }
